--- a/wikimedia/wikimedia/kafka-producer-wikimedia/pom.xml
+++ b/wikimedia/wikimedia/kafka-producer-wikimedia/pom.xml
@@ -12,6 +12,8 @@
     <groupId>com.springboot.producer</groupId>
     <artifactId>kafka-producer-wikimedia</artifactId>
 
+    <packaging>jar</packaging>
+
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
