--- a/wikimedia/wikimedia/docker-compose.yml
+++ b/wikimedia/wikimedia/docker-compose.yml
@@ -1,14 +1,19 @@
 version: '2'
 services:
   zookeeper:
+    container_name: zookeeper
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 22181:2181
+    volumes:
+      - zookeeper-data:/var/lib/zookeeper/data
+      - zookeeper-logs:/var/lib/zookeeper/log
 
   kafka:
+    container_name: kafka-service
     image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
@@ -21,11 +26,15 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes:
+      - kafka-data:/var/lib/kafka/data
+      - kafka-logs:/var/lib/kafka/log
 
 #  PLAINTEXT://kafka:9092 - this is the port for internal docker connections
 #  PLAINTEXT_HOST://localhost:29092 - this is anything that comes from local host
 
   mysql:
+    container_name: mySQL-db
     image: mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD: password
@@ -35,5 +44,20 @@ services:
     ports:
       - 3306:3306
     command: ["mysqld"]
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+# Custom names for the volume
+volumes:
+  zookeeper-data:
+    name: zookeeper_data_vol
+  zookeeper-logs:
+    name: zookeeper_logs_vol
+  kafka-data:
+    name: kafka_data_vol
+  kafka-logs:
+    name: kafka_logs_vol
+  mysql-data:
+    name: mysql_data_vol
 
 # docker-compose -p wikimedia-service up -d - This creates a Docker project called "wikimedia-service"
