--- a/wikimedia/wikimedia/kafka-producer-wikimedia/src/main/resources/application.properties
+++ b/wikimedia/wikimedia/kafka-producer-wikimedia/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.group-id=kafka-group-1
+
+wikimedia.kafka.recentChanges.topic=wikimedia-recentChanges-topic
