Initial kafka consumer-database module setup

--- a/wikimedia/wikimedia/pom.xml
+++ b/wikimedia/wikimedia/pom.xml
@@ -17,6 +17,7 @@
 <!--	This lists out the child modules created in this project	-->
 	<modules>
 		<module>kafka-producer-wikimedia</module>
+		<module>kafka-consumer-database</module>
 	</modules>
 
 <!--	Since this will be the parent project, need to make the packaging as pom	-->
