Refactorin producer config naming

--- a/wikimedia/wikimedia/kafka-producer-wikimedia/src/main/resources/application.properties
+++ b/wikimedia/wikimedia/kafka-producer-wikimedia/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.bootstrap-servers=localhost:29092
-spring.kafka.consumer.group-id=kafka-group-1
+spring.kafka.producer.bootstrap-servers=localhost:29092
+spring.kafka.producer.group-id=kafka-group-1
 
 wikimedia.kafka.recentChanges.topic=wikimedia-recentChanges-topic
